cmake_minimum_required(VERSION 3.25)
project(CppProjects)

set(CMAKE_CXX_STANDARD 23)

add_executable(HelloWorld hello_world.cpp)
add_executable(LinkedList linked_list.cpp)
add_executable(Pointers pointers.cpp)

add_executable(Qn1 Project1/Qn1.cpp)
add_executable(Qn3 Project1/Qn3.cpp)
add_executable(Qn5 Project1/Qn5.cpp)